--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Scaffold
-tagline: A one-column minimalist Jekyll theme for bloggers
+tagline: A minimalist yet powerful Jekyll theme for bloggers
 author:
   name: Songzi Vong
   url: https://twitter.com/sziv2p/
