--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ tagline: A minimalist yet powerful Jekyll theme for bloggers
 author:
   name: Songzi Vong
   url: https://twitter.com/sziv2p/
-  avatar: https://github.githubassets.com/favicons/favicon.svg
+  avatar: https://avatars.githubusercontent.com/u/72621374
 paginate: 10
 tags_path: /tags/
 
